--- a/index.html
+++ b/index.html
@@ -10,16 +10,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <section>
+        <section class="top-banner">
             <div class="half-width">
                     <h1>Welcome TO </h1>
-                <h1><span class="name-highlight">Mahim</span> Website</h1>
+                <h1><span class="orange-highlight">Mahim</span> Website</h1>
                 <h3>World-class professonal web devoloper</h3>  
                 <p>Welcome to my website, where your dream website becomes a reality! 
                     I bring over 0 years of experience and expertise in crafting captivating websites that drive results. I am dedicated to providing you with the highest quality service in the industry.</p> 
-            </div>
+                <a class="Link-button" target="_blank" href="https://www.linkedin.com/in/mahim-hasan-3b9576254/">HIRE ME</a>
+
+                </div>
             <div class="half-width"> <img src="Images/profile1.png" > </div>
            
+        </section>
+        <section class="mid-banner">
+            <div class="mid-width"><img src="Images/profile2.png" ></div>
+            <div class="mid-width">
+                <h2>Dream Big</h2>
+                <h3>Became a web developer</h3>
+                <p>I already learned the basic HTML and CSS. I can build any simple website such as login page, website protfolio and business page and so on.</p>
+                <a class= "link" target="_blank" href="https://drive.google.com/file/d/1fJo0CqjHTjtmSpH3fHkzPMfotL0dl-ar/view?usp=sharing">DOWNLOAD RESUME</a>
+            </div>
+        </section>
+        <section class="experience-area">
+            <h2>Experiences</h2>
+            <div class="half-width">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-highlight">2024 - present | Pro level Web Developer</h3>
+                <p>I am the master of HTML, CSS, Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript called Vue JS. I even know the deployment server and security. I will give you 100% web solution. </p>
+            </div>
+            <div class="half-width">
+                <h2>Baby Web devoloper</h2>
+                <h3 class="orange-highlight">2022 - 2023 | programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web devoloper. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+            </div>
+        
         </section>
 </body>
 </html>
