--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </section>
         <section class="experience-area">
             <h2>Experiences</h2>
-            <div class="half-width">
+            <div id="full-stack" class="half-width single-experience">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="orange-highlight">2024 - present | Pro level Web Developer</h3>
                 <p>I am the master of HTML, CSS, Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript called Vue JS. I even know the deployment server and security. I will give you 100% web solution. </p>
             </div>
-            <div class="half-width">
+            <div id="baby-web" class="half-width single-experience">
                 <h2>Baby Web devoloper</h2>
                 <h3 class="orange-highlight">2022 - 2023 | programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web devoloper. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
@@ -47,5 +47,8 @@
             </div>
         
         </section>
+        <footer>
+            <p>© Mahim 2024, all rights reserved.</p>
+        </footer>
 </body>
 </html>
