--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahim Web Developer</title>
+    <title>Mahim protfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
                 <h1><span class="orange-highlight">Mahim</span> Website</h1>
                 <h3>World-class professonal web devoloper</h3>  
                 <p>Welcome to my website, where your dream website becomes a reality! 
-                    I bring over 0 years of experience and expertise in crafting captivating websites that drive results. I am dedicated to providing you with the highest quality service in the industry.</p> 
+                    I bring over 4 years of experience and expertise in data entry, data analyst and product managing  that drive results. I am dedicated to providing you with the highest quality service in the industry.</p> 
                 <a class="Link-button" target="_blank" href="https://www.linkedin.com/in/mahim-hasan-3b9576254/">HIRE ME</a>
 
                 </div>
@@ -29,22 +29,22 @@
                 <h2>Dream Big</h2>
                 <h3>Became a web developer</h3>
                 <p>I already learned the basic HTML and CSS. I can build any simple website such as login page, website protfolio and business page and so on.</p>
-                <a class= "link" target="_blank" href="https://drive.google.com/file/d/1fJo0CqjHTjtmSpH3fHkzPMfotL0dl-ar/view?usp=sharing">DOWNLOAD RESUME</a>
+                <a class= "link" target="_blank" href=https://docs.google.com/document/d/1kQLlA--j6WTRuzLkDTvqKFS5UGtKRTJI_QnHL6tJR68/edit?usp=sharing>DOWNLOAD RESUME</a>
             </div>
         </section>
         <section class="experience-area">
             <h2>Experiences</h2>
             <div id="full-stack" class="half-width single-experience">
-                <h2>Full Stack Web Developer</h2>
-                <h3 class="orange-highlight">2024 - present | Pro level Web Developer</h3>
-                <p>I am the master of HTML, CSS, Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript called Vue JS. I even know the deployment server and security. I will give you 100% web solution. </p>
+                <h2>Data Entry Operator</h2>
+                <h3 class="orange-highlight">2020 - 2023 | Pro level Data Entry Operator (Full-Time)</h3>
+                <p>I am the master of Data Entry, Email marketing, Product Manager . I am a dedicated and detail-oriented Data Entry Officer and Produck Manager with a passion for ensuring accuracy and efficiency in data management. With a proven track record of maintaining data integrity and meeting tight deadlines, I thrive in fast-paced environments where precision and attention to detail are paramount. As a remote worker, I have honed my self-discipline and time management skills, allowing me to excel in virtual collaboration while delivering high-quality work. </p>
             </div>
             <div id="baby-web" class="half-width single-experience">
                 <h2>Baby Web devoloper</h2>
-                <h3 class="orange-highlight">2022 - 2023 | programming Hero Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web devoloper. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
-
-            </div>
+                <h3 class="orange-highlight">2022 - Present | Social Media Exicutive (Part-Time) </h3>
+                <p>I am a creative and strategic Social Media Manager passionate about leveraging digital platforms to drive engagement, build brand awareness, and foster meaningful connections with audiences. With a keen eye for trends and a deep understanding of social media algorithms, I specialize in crafting compelling content strategies that resonate with target demographics. As a remote worker, I thrive in collaborative environments where innovation and creativity are encouraged, and I excel at utilizing various social media management tools to optimize performance and achieve campaign objectives.</p>
+            </div>    
+            
         
         </section>
         <footer>
