--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="half-width">
                     <h1>Welcome TO </h1>
                 <h1><span class="orange-highlight">Mahim</span> Website</h1>
-                <h3>World-class professonal web devoloper</h3>  
+                <h3>World-class professonal Data Entry Officer and Product Manager</h3>  
                 <p>Welcome to my website, where your dream website becomes a reality! 
                     I bring over 4 years of experience and expertise in data entry, data analyst and product managing  that drive results. I am dedicated to providing you with the highest quality service in the industry.</p> 
                 <a class="Link-button" target="_blank" href="https://www.linkedin.com/in/mahim-hasan-3b9576254/">HIRE ME</a>
